fixed swagger file
